# Parakeet-ONNX

./: README.md  example.py  pyproject.toml
examples/: live_transcription_from_microphone.py  offline_transcription_from_audio_file.py  transcribe_from_audio.py  transcribe_from_file.py  transcribe_from_mic.py  transcribe_from_microphone.py
src/: __init__.py  parakeet_eou.py  recording.py  utils.py
src/parakeet_eou/: config.py  parakeet_eou_model.py  tokenizer.py
src/parakeet_onnx/: __init__.py  eou_model.py  parakeet_eou_model.py  tokenizer.py  utils.py
